2006-02-17  Chris Toshok  <toshok@ximian.com>

	* OdbcDataReader.cs: remove VisibleFieldCount property.

2005-11-21  Senganal T <tsenganal@novell.com>

	* OdbcTransaction.cs
	* OdbcCommandBuilder.cs
	* OdbcParameterCollection.cs
	* OdbcDataReader.cs
	* OdbcFactory.cs
	* OdbcDataAdapter.cs
	* OdbcParameter.cs
	
	Added stubs and other changes for ADO.NET 2.0 compatibility

2005-10-14  Senganal T <tsenganal@novell.com>

	* OdbcColumn.cs : Changed the mapping of OdbcType.Char to string
	instead of char. Fixes bug #67269

2005-10-14  Senganal T <tsenganal@novell.com>

	* OdbcDataReader.cs: Added Text and NText datatypes to the list
	of datatypes checked by GetValue () method. Fixes bug #75032

2005-10-14  Sureshkumar T  <tsureshkumar@novell.com>

	* OdbcDataReader.cs (GetValue): Use SQL_CHAR for Numeric as
	temporary fix.

	* OdbcParameter.cs (CopyValue): Add support for Numeric & Decimal
	parameters.

2005-10-08  Sureshkumar T  <tsureshkumar@novell.com>

	* OdbcCommand.cs (BindParameters): Copy the parameter Value after
	binding.

	* OdbcParameter.cs: re-implemented the native buffer handling and
	odbc type handling.

	* NativeBuffer.cs: A native buffer class to hold pointer to native
	memory.

	* OdbcTypeMap.cs (OdbcTypeMap): structure to hold different odbc
	types and the default mapping.

	* OdbcTypeConverter.cs: Simplified mapping between different odbc
	types using switch-case.

	* libodbc.cs (SQLBindParameter): use only one entry point and use
	IntPtr instead of ref.

2005-08-20  Gert Driesen  <drieseng@users.sourceforge.net>

	* OdbcDataReader.cs: Marked GetPrimaryKeysBySQLStatistics unsafe.
	This fixes the build on Windows (using csc).

2005-08-09  Sureshkumar T  <tsureshkumar@novell.com>

	* OdbcDataReader.cs: GetSchemaTable (): set values for the column
	attributes using SQLColAttribute. If SQLPrimaryKeys does not
	yeild, try SQLStatistics. Optimized primary key logic.

	* libodbc.cs: Added api SQLStatistics and constants.
