@@ -1,3 +1,8 @@
+2006-05-09  Senganal T  <tsenganal@novell.com>
+
+	* OdbcConnection.cs : Implemented ChangeDatabase Method
+	* libodbc.cs : Added value for CurrentCatalog in OdbcConnectionAttribute 
+
 2006-02-17  Chris Toshok  <toshok@ximian.com>
 
 	* OdbcDataReader.cs: remove VisibleFieldCount property.
